OO-7965: more heuristic check of password history for generated users